samples/_failures_safe/1761360607_fffdae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e03da412.c: In function ‘main’:
./samples/SAFE/__tmp_e03da412.c:160:13: error: expected ‘;’ at end of input
  160 |     dijkstra
      |             ^
      |             ;
./samples/SAFE/__tmp_e03da412.c:160:5: error: expected declaration or statement at end of input
  160 |     dijkstra
      |     ^~~~~~~~
